<resources>
    <string name="app_name">Games Application</string>
    <string name="login_main">Login</string>
    <string name="text_main_welcome">Welcome!</string>
    <string name="text_subtitle">With our app it will be much easier and more fun to keep track of your games!</string>
    <string name="edit_text_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="text_ckecked_box">Remember me</string>
    <string name="text_log_in">Log in</string>
    <string name="text_create_account">Create an account</string>
    <string name="text_new_account">New account</string>
    <string name="text_photo_singup">Shall we choose a photo?</string>
    <string name="text_autentication_singup">Data for authentication</string>
    <string name="text_personal_data">Personal data</string>
    <string name="hint_name_singup">What is your name?</string>
    <string name="text_city_singup">What is your city?</string>
    <string name="text_birth_singup">Birth date?</string>
    <string name="level_gaming">What is your gaming level?</string>
    <string name="text_favorite_console">What is your favorite console?</string>
    <string name="text_sex_person">Sex:</string>
    <string name="text_feminine">Feminine</string>
    <string name="text_masculine">Masculine</string>
    <string name="games_finished">Games Finished</string>
    <string name="text_age">Age</string>
    <string name="text_user_name">Username</string>
    <string name="text_user_email">username@gmail.com</string>
    <string name="text_title_account">Your registered games</string>
    <string name="registered_games">Currently Playing</string>
    <string name="description_game">Description</string>
    <string name="studio_game">Studio</string>
    <string name="date_release">Release date of</string>
    <string name="games_registration_add">Game registration</string>
    <string name="game_status">Game finish?</string>
    <string name="afe_user">Age?</string>

    <string-array name="consoles">
        <item>PlayStation 5</item>
        <item>XBox One</item>
        <item>PlayStation 4</item>
        <item>XBox 360</item>
        <item>Nintendo Switch</item>
        <item>PlayStation 2</item>
    </string-array>

</resources>