<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wavesingup1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/text_new_account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="42dp"
            android:drawableStart="@drawable/ic_baseline_save_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wavesingup2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:drawableStart="@drawable/ic_baseline_camera"
                android:drawablePadding="5dp"
                android:text="@string/text_photo_singup"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_view_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_photo"
                app:srcCompat="@drawable/ic_baseline_person" />

            <TextView
                android:id="@+id/text_view_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:text="@string/text_autentication_singup"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/text_view_photo"
                app:layout_constraintTop_toBottomOf="@+id/image_view_photo" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/edit_text_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_view_data"
                app:layout_constraintTop_toBottomOf="@+id/text_view_data" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_email"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

            <TextView
                android:id="@+id/text_view_personal_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_baseline_person"
                android:drawablePadding="5dp"
                android:text="@string/text_personal_data"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/edit_text_password"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/hint_name_singup"
                android:minHeight="48dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_view_personal_data"
                app:layout_constraintTop_toBottomOf="@+id/text_view_personal_data" />

            <EditText
                android:id="@+id/edit_text_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="42dp"
                android:hint="@string/text_city_singup"
                android:minHeight="48dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/edit_text_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="42dp"
                android:text="@string/level_gaming"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/edit_text_birth_date"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_birth_date" />

            <com.google.android.material.slider.Slider
                android:id="@+id/slider_level"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:stepSize="1"
                android:valueFrom="1"
                android:valueTo="4"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/text_view_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Iniciante"
                android:textColor="@color/blue_games"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/slider_level"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_favorite_console"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/slider_level"
                app:layout_constraintTop_toBottomOf="@+id/slider_level" />

            <Spinner
                android:id="@+id/id_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/consoles"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/text_view_level"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_sex_person"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/id_spinner"
                app:layout_constraintTop_toBottomOf="@+id/id_spinner" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/id_spinner"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_feminine" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_masculine" />
            </RadioGroup>

            <EditText
                android:id="@+id/edit_text_birth_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/text_age"
                android:inputType="date"
                android:minHeight="48dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_city"
                app:layout_constraintStart_toStartOf="@+id/edit_text_city"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_city" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>