<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGame">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wavesingup1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wavesingup2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_text_name_game"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_main"
        android:ems="10"
        android:hint="@string/app_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:text="Name"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/edit_text_add_descr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_main"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:text="@string/description_game"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_name_game"
        app:layout_constraintStart_toStartOf="@+id/edit_text_name_game"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name_game" />

    <EditText
        android:id="@+id/edit_text_add_studio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_main"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:text="@string/studio_game"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_add_descr"
        app:layout_constraintStart_toStartOf="@+id/edit_text_add_descr"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_descr" />

    <EditText
        android:id="@+id/edit_text_add_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_main"
        android:ems="10"
        android:inputType="date"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:text="@string/date_release"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_add_studio"
        app:layout_constraintStart_toStartOf="@+id/edit_text_add_studio"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_studio" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Yes"
            android:textColor="@color/gray" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="No"
            android:textColor="@color/gray" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
        app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/game_status"
        app:layout_constraintStart_toStartOf="@+id/edit_text_add_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_add_date" />

    <Button
        android:id="@+id/button_save_add"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/games_registration_add"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

</androidx.constraintlayout.widget.ConstraintLayout>